--- a/angular2/src/app/user/follow/user.component.html
+++ b/angular2/src/app/user/follow/user.component.html
@@ -16,7 +16,7 @@
   </div>
   <div class="col-md-4 user-profile-follow">
     <button (click)="toogleFollow(user)" [class.btn-followed]="user.followed" type="button" class="btn btn-outline-success btn-follow">
-      <i class="fa fa-user" aria-hidden="true"></i>
+      <i class="fa fa-user" aria-hidden="true" style="font-size: 22px"></i>
     </button>
   </div>
 </div>
