--- a/angular2/src/app/card/card.component.css
+++ b/angular2/src/app/card/card.component.css
@@ -1,8 +1,3 @@
-.card-picture {
-  max-height: 130px;
-  max-width: 130px;
-}
-
 .list-card {
   margin: 20px;
 }
@@ -119,8 +114,19 @@
 }
 .wrapper .front-card .image {
   display: block;
-  margin: 15px;
-  height: 40%;
+  margin: 15px auto;
+  height: 60%;
+  width: 160px;
+  position: relative;
+}
+.wrapper .front-card .image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
 }
 .wrapper .front-card .add-img {
   width: 100%;
@@ -149,6 +155,11 @@
 .wrapper .f-deck .image label:hover {
   color: blue;
   opacity: .9;
+}
+.wrapper .f-deck .image label  {
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
 }
 .wrapper .f-deck textarea::placeholder {
   opacity: .7;
