--- a/angular2/src/app/card/card.component.html
+++ b/angular2/src/app/card/card.component.html
@@ -6,13 +6,13 @@
 		<div class="front-card">
 			<div class="f-deck">
 				<div class="image">
-					<label type="button"><i class="fa fa-image" style="font-size: 25px; opacity: .6;"></i>
+					<label type="button"><i class="fa fa-image" id="img-icon" style="font-size: 25px; opacity: .6;"></i>
 						<img class="card-picture" id="blah" [src]="picture" [style.display]="picture ? '': 'none'">
 						<input type="hidden" name="fileHidden" formControlName="picture">
 						<input class="form-control" type="file" style="display: none" id="picture" (change)="onFileChange($event)" #fileInput>
 					</label>
 				</div>
-				<div style="height: 50%; border-top: 1px solid #eceaea;">
+				<div style="height: 30%; border-top: 1px solid #eceaea; opacity: .8">
 					<textarea type="text" formControlName="front" id="front-card-value" class="txt-back" placeholder="Front">
 					</textarea>
 				</div>
