--- a/angular2/src/app/deck/deck.component.css
+++ b/angular2/src/app/deck/deck.component.css
@@ -30,6 +30,7 @@
 }
 .show-value .favorites .item-deck img {
   width: 100%;
+  height: 100%;
   border-radius: 18px;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.17);
 }
