fix img deck profile

--- a/angular2/src/app/deck-details/deck-details.component.html
+++ b/angular2/src/app/deck-details/deck-details.component.html
@@ -3,8 +3,8 @@
   <div class="row" style="margin-top: 25px;">
     <div class="col-xs-12 col-md-4">
       <div class="left">
-        <div class="img-deck">
-          <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image">
+        <div class="img-deck" style="height: 330px">
+          <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image" style="height: 100%">
         </div>
         <div class="txt">
           <div class="name-deck">
