--- a/angular2/src/app/user/user.component.html
+++ b/angular2/src/app/user/user.component.html
@@ -53,7 +53,7 @@
                   <div class="row" style="margin-bottom: 30px;">
                     <div class="col-md-4 image-wrap">
                       <a href ="#" [routerLink]="['/decks', deck.id]">
-                        <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image" style="width: 150px;">
+                        <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image" style="width: 150px; height: 172px">
                       </a>
                     </div>
                     <div class="col-md-8" style="margin-top: 5px">
