fix lesson card

--- a/angular2/src/app/create-deck/create-deck.component.html
+++ b/angular2/src/app/create-deck/create-deck.component.html
@@ -4,8 +4,8 @@
       <div class="col-xs-12 col-md-4">
         <div class="left">
           <div class="cover-deck" (click)="coverImgModal.open()" data-whatever="@mdo">
-            <div id="preview-img" class="import-cover-deck">
-              <img id="blah" src="#" style="display: none">
+            <div id="preview-img" class="import-cover-deck" style="height: 100%">
+              <img id="blah" src="#" style="display: none; height: 100%">
               <div class="img-tog">
                 <div class="change-cover">
                   <p class="ct-text">CHOOSE COVER</p>
