--- a/angular2/src/app/edit-deck/edit-deck.component.css
+++ b/angular2/src/app/edit-deck/edit-deck.component.css
@@ -1,6 +1,9 @@
 .left {
   padding: 20px;
 }
+.left button {
+  outline: none;
+}
 .left .img-deck {
   height: 310px;
 }
@@ -15,10 +18,11 @@
 }
 .left .txt {
   margin: 15px;
+}.left .txt input {
+  font-family: DINNextRoundedLTPro-Medium, sans-serif;
 }
 .left .txt input:focus{
   border-bottom: 2px solid #32cdff;
-  font-family: DINNextRoundedLTPro-Medium, sans-serif;
   opacity: .9;
 }
 .left .txt input:placeholder-shown {
@@ -55,21 +59,15 @@
 .left .txt .btn-ct {
   margin-top: 20px;
 }
-.left .txt .btn-ct .btn-ct-setting {
-  background-color: #fff;
-  border-radius: 10px;
-  border: 2px solid #32cdff;
-  width: 15%;
-}
 .left .txt .btn-ct .btn-ct-publ {
   background-color: #32cdff;
   border-radius: 12px;
-  border: 2px solid #32cdff;
+  border: none;
   cursor: pointer;
   font-weight: bold;
-  margin-left: 8px;
   opacity: 0.7;
-  width: 78%;
+  width: 100%;
+  padding: 8px;
 }
 .left .txt .btn-ct .fa-cog {
   color: #32cdff;
