--- a/angular2/src/app/create-deck/create-deck.component.css
+++ b/angular2/src/app/create-deck/create-deck.component.css
@@ -15,6 +15,7 @@
 }
 .left .txt {
   margin: 15px;
+  font-family: DINNextRoundedLTPro-Medium, sans-serif;
 }
 .left .txt input:focus{
   border-bottom: 2px solid #32cdff;
