fix card profile

--- a/angular2/src/app/card/card.component.css
+++ b/angular2/src/app/card/card.component.css
@@ -173,6 +173,9 @@
   text-align: center;
   width: 100%;
 }
+.wrapper .f-deck .back {
+  padding-top: 130px;
+}
 .wrapper .f-deck .import-cover-deck {
   width: 100%;
 }
