--- a/angular2/src/app/card/card.component.html
+++ b/angular2/src/app/card/card.component.html
@@ -20,7 +20,7 @@
 		</div>
 		<div class="back-card">
 			<div class="f-deck">
-				<textarea type="text" formControlName="back" id="back-card-value" class="form-control txt-back" placeholder="Back">
+				<textarea type="text" formControlName="back" id="back-card-value" class="form-control txt-back back" placeholder="Back">
 				</textarea>
 			</div>
 		</div>
