--- a/angular2/src/app/card/card.component.html
+++ b/angular2/src/app/card/card.component.html
@@ -7,7 +7,7 @@
 			<div class="f-deck">
 				<div class="image">
 					<label type="button"><i class="fa fa-image" style="font-size: 25px; opacity: .6;"></i>
-						<img class="card-picture" id="blah" [src]="picture" [style.display]="picture ? '': 'none'">
+						<img class="card-picture" id="blah" [src]="picture || '#'" [style.display]="picture ? '': 'none'">
 						<input type="hidden" name="fileHidden" formControlName="picture">
 						<input class="form-control" type="file" style="display: none" id="picture" (change)="onFileChange($event)" #fileInput>
 					</label>
