--- a/angular2/src/app/lesson/lesson.component.html
+++ b/angular2/src/app/lesson/lesson.component.html
@@ -1,1 +1,4 @@
+<div class="lesson-wrapper">
+<div class="_3PcMa _3lLex"><div class="_3yCFA" [style.width.%]="progress"></div></div>
 <ng-template lesson-content></ng-template>
+</div>
