--- a/angular2/src/app/deck-details/deck-details.component.html
+++ b/angular2/src/app/deck-details/deck-details.component.html
@@ -72,7 +72,8 @@
                       <p class="txt-front">{{card.front}}</p>
                     </div>
                     <div class="item-card back">
-                      <p>{{card.back}}</p>
+                    
+                      <p [innerHTML]="card.back"></p>
                     </div>
                   </div>
                 </div>
