--- a/angular2/src/app/app.component.html
+++ b/angular2/src/app/app.component.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <app-header>
 </app-header>
 <div style="min-height:775px; background-color: #F7F7F7">
