--- a/angular2/src/app/card/card.component.css
+++ b/angular2/src/app/card/card.component.css
@@ -134,9 +134,6 @@
 .wrapper .back-card {
   flex: 3;
 }
-.wrapper .list-option {
-  flex: 1;
-}
 .wrapper .f-deck {
   background-color: #fff;
   border-radius: 30px;
@@ -186,4 +183,32 @@
   font-weight: bold;
   opacity: 0.8;
   text-align: center;
+}
+
+@media only screen and (max-width: 450px) {
+  .n-card {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+  .n-card:hover {
+    background-color: #fff !important;
+  }
+  .wrapper .front-card {
+    flex: 5;
+  }
+  .wrapper .back-card {
+    flex: 5;
+  }
+  .wrapper .number {
+    flex: 0;
+  }
+  .f-deck {
+    height: 220px !important;
+  }
+  .f-deck .back {
+    padding-top: 90px !important;
+  }
+  .f-deck .image {
+    width: 130px !important;
+  }
 }
