--- a/angular2/src/app/card/card.component.html
+++ b/angular2/src/app/card/card.component.html
@@ -13,14 +13,14 @@
 					</label>
 				</div>
 				<div style="height: 30%; border-top: 1px solid #eceaea; opacity: .8">
-					<textarea type="text" formControlName="front" id="front-card-value" class="txt-back" placeholder="Front">
+					<textarea type="text" formControlName="front" id="front-card-value" class="txt-back" placeholder="Front" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Front'">
 					</textarea>
 				</div>
 			</div>
 		</div>
 		<div class="back-card">
 			<div class="f-deck">
-				<textarea type="text" formControlName="back" id="back-card-value" class="form-control txt-back back" placeholder="Back">
+				<textarea type="text" formControlName="back" id="back-card-value" class="form-control txt-back back" placeholder="Back" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Back'">
 				</textarea>
 			</div>
 		</div>
