--- a/angular2/src/app/create-deck/create-deck.component.html
+++ b/angular2/src/app/create-deck/create-deck.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <form [formGroup]="myForm" novalidate (ngSubmit)="save(myForm)">
     <div class="row" style="margin-top: 25px;">
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 col-md-4 bod">
         <div class="left">
           <div class="cover-deck" (click)="coverImgModal.open()" data-whatever="@mdo">
             <div id="preview-img" class="import-cover-deck" style="height: 100%">
@@ -15,10 +15,10 @@
           </div>
           <div class="txt pd-top-10">
             <div class="title-deck">
-              <input type="text" style="outline: none; font-size: 25px" formControlName="title" placeholder="Enter title" class="ip input-title">
+              <input type="text" style="outline: none; font-size: 25px" formControlName="title" placeholder="Enter title" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter title'" class="ip input-title">
             </div>
             <div class="description-deck" style="margin-top: 15px;">
-              <input type="text" style="outline: none; font-size: 18px" formControlName="description" placeholder="Enter description" class="ip input-des">
+              <input type="text" style="outline: none; font-size: 18px" formControlName="description" placeholder="Enter description" onfocus="this.placeholder = ''" class="ip input-des" onblur="this.placeholder = 'Enter description'">
             </div>
 
             <div class="btn-ct">
@@ -27,7 +27,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-md-8">
+      <div class="col-xs-12 col-md-8 pad-top-10">
         <div class="add-card" (click)="addCard()">
           <div class="add">
             <span>+</span>
@@ -37,7 +37,7 @@
           <div formArrayName="cards_attributes" *ngFor="let cards_attributes of myForm.controls.cards_attributes.controls; let i=index">
 
             <div [formGroupName]="i">
-              <card [group]="myForm.controls.cards_attributes.controls[i]" [i]="i+1">
+              <card [group]="myForm.controls.cards_attributes.controls[i]" [i]="i+1" style="position: relative;">
               </card>
                 <div class="panel-heading">
                   <span class="glyphicon glyphicon-remove pull-right" (click)="removeCard(i)"></span>
