--- a/angular2/src/app/user/user.component.css
+++ b/angular2/src/app/user/user.component.css
@@ -120,7 +120,8 @@
   display: inline-block;
   font-family: DINNextRoundedLTPro-Bold,sans-serif;
   font-size: 15px;
-  margin-left: 60px;
+  margin-left: 30px;
+  margin-right: 30px;
   padding: 25px 0 10px;
   text-transform: uppercase;
 }
@@ -168,4 +169,18 @@
 }
 .number {
   color: lightgray;
+}
+
+@media only screen and (max-width: 450px) {
+  .profile-content {
+    margin-left: 0px !important;
+    border-radius: 0px;
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0) !important;
+  }
+
+  .swap {
+    margin: 0 !important;
+    padding-top: 15px;
+    background-color: #fff;
+  }
 }
