--- a/angular2/src/app/lesson/lesson.component.html
+++ b/angular2/src/app/lesson/lesson.component.html
@@ -9,7 +9,7 @@
             Are your sure?
           </modal-content>
           <modal-footer>
-            <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="quit_lesson()">Close</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="quit_lesson()">Quit</button>
             <button id="closeModalButton" type="button" class="btn btn-secondary" data-dismiss="modal" (click)="confirmModal.close()">Close</button>
           </modal-footer>
     </modal>
