--- a/angular2/src/app/edit-deck/edit-deck.component.css
+++ b/angular2/src/app/edit-deck/edit-deck.component.css
@@ -62,12 +62,12 @@
 .left .txt .btn-ct .btn-ct-publ {
   background-color: #32cdff;
   border-radius: 12px;
-  border: none;
+  border: 2px solid #32cdff;
   cursor: pointer;
   font-weight: bold;
+  margin-left: 8px;
   opacity: 0.7;
-  width: 100%;
-  padding: 8px;
+  width: 78%;
 }
 .left .txt .btn-ct .fa-cog {
   color: #32cdff;
